# clawswarm-multi

./: .gitignore  README.md  ecosystem.config.js  package-lock.json  package.json  tsconfig.json
scheduler-server/: .env.dev  README.md  pyproject.toml  requirements.txt  run_dev.py
scheduler-server/src/: __init__.py  main.py
scheduler-server/src/api/: __init__.py  deps.py
scheduler-server/src/core/: config.py  db.py  security.py
scheduler-server/src/integrations/: __init__.py  channel_client.py
scheduler-server/src/models/: __init__.py  agent_dialogue.py  agent_profile.py  app_user.py  base_mixins.py  chat_group.py  chat_group_member.py  conversation.py  message.py  message_callback_event.py  message_dispatch.py  openclaw_instance.py  project.py  project_document.py  task.py  task_event.py
scheduler-server/src/schemas/: __init__.py  address_book.py  agent.py  agent_dialogue.py  common.py  conversation.py  group.py  instance.py  project_management.py  task.py
scheduler-server/src/scripts/: __init__.py  seed_demo.py
scheduler-server/src/services/: agent_cleanup.py  agent_cs_id.py  agent_dialogue_context_builder.py  agent_dialogue_lookup.py  agent_dialogue_runner.py  agent_dialogue_service.py  agent_dialogue_state_service.py  agent_profile_service.py  auth.py  callback_event_service.py  conversation_dispatch_service.py  conversation_events.py  conversation_query_service.py  default_user.py  instance_service.py  local_agent_mock.py  openclaw_probe_service.py  project_document_service.py  project_service.py  (+2 more)
scheduler-server/tests/: test_stage1_backend.py
(+142 files in other folders)
