[project]
name = "clawswarm-scheduler-server"
version = "0.1.0"
description = "ClawSwarm scheduler backend service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "sqlalchemy==2.0.40",
    "pydantic==2.11.1",
    "httpx==0.28.1",
    "websockets==15.0.1",
    "wsproto==1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
